[tool.poetry]
name = "pyverless"
version = "0.0.45"
authors = ["rperez <rperez@op2aim.io>"]
description="A mini-framework providing tools to help you make complex APIs with serverless"
readme="README.md"
license="BSD"
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: BSD License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3 :: Only",
]
keywords=["serverless", "api", "development"]
packages = [
    { include = "pyverless" }
]
homepage="https://github.com/QuantumBA/pyverless"
repository = "https://github.com/QuantumBA/pyverless"

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "<2.0.0"
PyYAML = ">=5.1"
sentry-sdk = ">=0.5.1"
python-json-logger = "==2.0.2"
aws-lambda-powertools = "==1.25.7"

[tool.poetry.dev-dependencies]
ipdb = "==0.13.9"
pytest = "==3.1.3"
pytest-cov = "==2.5.1"
Faker = "==9.3.1"
boto3 = "==1.19.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
